--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ strong{
     color: var(--azul-dark);
     margin: 0 0 0.6rem;
     font-size: 1.3rem;
+    font-weight: var(--font-normal);
 }
 
 .desc{
